--- a/index.html
+++ b/index.html
@@ -324,19 +324,19 @@
 
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
-                        <a href="#vision-section">Vision</a>
+                        <a href="#vision">Vision</a>
                     </h6>
                 </div>
 
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
-                        <a href="#profile-section">Profile</a>
+                        <a href="#about">Profile</a>
                     </h6>
                 </div>
 
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
-                        <a href="#works-section">Our Works</a>
+                        <a href="#works">Our Works</a>
                     </h6>
                 </div>
 
