--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".assets/css/styles.css">
-    <link rel="stylesheet" href=".assets/css/kevin_responsive.css">
-    <link rel="stylesheet" href=".assets/css/june_responsive.css">
-    <link rel="stylesheet" href=".assets/css/naythan_responsive.css">
-    <link rel="stylesheet" href=".assets/css/bev_responsive.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/kevin_responsive.css">
+    <link rel="stylesheet" href="assets/css/june_responsive.css">
+    <link rel="stylesheet" href="assets/css/naythan_responsive.css">
+    <link rel="stylesheet" href="assets/css/bev_responsive.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+
 
 </head>
 
@@ -240,7 +241,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col">
+                <div class="col maps">
 
                     <div class="contact-title">
                         <img src="./assets/images/contact/logo_3_new.png" width="60%" height="auto" />
@@ -297,7 +298,9 @@
                             </label>
                         </div>
 
-                        <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
+                        <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI">
+
+                        </div>
 
                         <div class="form-group">
                             <button class="btn" type="submit">Send</button>
