Finalized CSS and Responsiveness

--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
 </head>
 
 <body>
-    <section>
-        <nav class="navbar navbar-expand-lg fixed-top bg-light navbar-light py-3">
+    <section class="top-nav">
+        <nav class="navbar navbar-expand-lg fixed-top top-bg navbar-light py-3">
             <div class="container col-10">
-                <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"></a>
-                <button class=" navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                <a class="navbar-brands" href="#"><img src="./assets/images/navigation/logo_3.png" width="250"></a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active px-3" href="#home">Home</a>
+                            <a class="nav-links active px-3" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active px-3" href="#news">News</a>
+                            <a class="nav-links px-3" href="#news">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#vision">Vision</a>
+                            <a class="nav-links px-3" href="#vision">Vision</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#about">About</a>
+                            <a class="nav-links px-3" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#works">Our Works</a>
+                            <a class="nav-links px-3" href="#works">Our Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#contact">Contact</a>
+                            <a class="nav-links px-3" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
