fixed news section table responsiveness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+    <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/kevin_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
@@ -74,60 +75,31 @@
     </section>
     <!-- news starts here -->
     <section id="news">
-        <div class="container-fluid">
+        <div class="container">
             <div class="news-title">
                 News
             </div>
 
-            <div class="table-responsive">
-                <table class="table table-hover mt-5">
-                    <tbody>
-                        <!-- <tr>
-                                <th scope="row" id="title">Lorem ipsum</th>
-                                <td id="date text-dark">01-02-2020</td>
-                                <td class="d-none d-sm-table-cell text-dark">Lorem ipsum dolor sit amet..</td>
-                                <td class="read-more"><a href="#">READ MORE</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row" id="title">Lorem ipsum</th>
-                                <td id="date text-dark">01-02-2020</td>
-                                <td class="d-none d-sm-table-cell text-dark">Lorem ipsum dolor sit amet..</td>
-                                <td class="read-more"><a href="#">READ MORE</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row" id="title">Lorem ipsum</th>
-                                <td id="date text-dark">01-02-2020</td>
-                                <td class="d-none d-sm-table-cell text-dark">Lorem ipsum dolor sit amet..</td>
-                                <td class="read-more"><a href="#">READ MORE</a>
-                                </td>
-                            </tr> -->
-                        <tr>
-                            <td style="color: #00AEEF; font-weight: bold;">教へひかン溶毎カオ</td>
-                            <td>01.01.2020</td>
-                            <td class="d-none d-sm-table-cell">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
-                            <td style="color: #EC008C;"><a href="#">READ MORE</a></td>
-                        </tr>
-                        <tr>
-                            <td style="color: #00AEEF; font-weight: bold;">教へひかン溶毎カオ</td>
-                            <td>01.01.2020</td>
-                            <td class="d-none d-sm-table-cell">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
-                            <td style="color: #EC008C;"><a href="#">READ MORE</a></td>
-                        </tr>
-                        <tr>
-                            <td style="color: #00AEEF; font-weight: bold;">教へひかン溶毎カオ</td>
-                            <td>01.01.2020</td>
-                            <td class="d-none d-sm-table-cell">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
-                            <td style="color: #EC008C;"><a href="#">READ MORE</a></td>
-                        </tr>
-
-                    </tbody>
-
-                </table>
-            </div>
-
-        </div>
+            <table id="news-table">
+                <tr>
+                    <td id="n-title">教へひかン溶毎カオ</td>
+                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
+                    <td id="n-read-more"><a href="#">Read more</a></td>
+                </tr>
+                <tr>
+                    <td id="n-title">教へひかン溶毎カオ</td>
+                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
+                    <td id="n-read-more"><a href="#">Read more</a></td>
+                </tr>                <tr>
+                    <td id="n-title">教へひかン溶毎カオ</td>
+                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
+                    <td id="n-read-more"><a href="#">Read more</a></td>
+                </tr>
+            </table>
+         </div>
     </section>
 
     <!-- news ends here -->
