--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
             <table id="news-table">
                 <tr>
                     <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
                 <tr>
                     <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>                <tr>
                     <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">April 08, 2020</td>
+                    <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
@@ -213,7 +213,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col maps">
+                <div class="col">
 
                     <div class="contact-title">
                         <img src="./assets/images/contact/logo_3_new.png" width="60%" height="auto" />
@@ -249,7 +249,7 @@
 
                 </div>
 
-                <div class="col form">
+                <div class="col">
                     <div class="form-title">
                         Get in touch
                     </div>
