reverted back to first navbar and main content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/kevin_responsive.css">
+    <link rel="stylesheet" href="assets/css/kev_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
     <link rel="stylesheet" href="assets/css/naythan_responsive.css">
     <link rel="stylesheet" href="assets/css/bev_responsive.css">
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <section class="top-nav">
+    <!-- <section class="top-nav">
         <nav class="navbar navbar-expand-lg fixed-top top-bg navbar-light py-3">
             <div class="container col-10">
                 <a class="navbar-brands" href="#"><img src="./assets/images/navigation/logo_3.png" width="250"></a>
@@ -54,8 +54,59 @@
                 </div>
             </div>
         </nav>
+    </section> -->
+
+    <section>
+        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-3">
+            <div class="container col-10">
+                <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"></a>
+                <button class=" navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active px-3" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active px-3" href="#news">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#vision">Vision</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#works">Our Works</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </section>
     <!-- main visual starts here -->
+    <!-- <section id="home">
+        <div class="parallax" id="Home">
+            <div class="container visual_content1">
+                <div class="visual_content2">
+                    <span>Thanks to everyone!</span>
+                </div>
+                <div class="visual_content3">
+                    <span>It was celebrated its 13th anniversary!
+                    </span>
+                </div>
+                <div class="visual_content4">
+                    <span>HTS有限会社は2019年3月15日で設立13周年を迎えます。
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section> -->
     <section id="home">
         <div class="parallax" id="Home">
             <div class="container visual_content1">
