--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/kev_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
     <link rel="stylesheet" href="assets/css/naythan_responsive.css">
@@ -107,7 +108,8 @@
             </div>
         </div>
     </section> -->
-    <section id="home">
+    <!-- kevin section -->
+    <!-- <section id="home">
         <div class="parallax" id="Home">
             <div class="container visual_content1">
                 <div class="visual_content2">
@@ -123,7 +125,22 @@
                 </div>
             </div>
         </div>
+    </section> -->
+
+    <!-- bev-animation section -->
+
+    <section id="home">
+        <div class="parallax">
+            <div class="container visual_content1">
+                <div class="inner">
+                    <h1>Thanks to everyone</h1>
+                    <p>It was celebrated its 13th anniversary!</p>
+                    <p>HTS有限会社は2019年3月15日で設立13周年を迎えます</p>
+                </div>
+            </div>
+        </div>
     </section>
+    
     <!-- news starts here -->
     <section id="news">
         <div class="container">
