removed animate.css and updated the content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/kev_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
     <link rel="stylesheet" href="assets/css/naythan_responsive.css">
@@ -128,9 +127,6 @@
             </div>
         </div>
     </section> -->
-
-    <!-- bev-animation section -->
-
     <section id="home">
         <div class="parallax">
             <div class="container visual_content1">
@@ -182,9 +178,11 @@
             <div class="col-md">
                 <div class="container vision_card">
                     <div class="vision_heading">Our Vision</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
-                        consequuntur officiis laudantium, ut quam corrupti est labore sapiente et vero dolore nesciunt?
-                        Accusamus vitae totam saepe commodi?</p>
+                    <p>弊社の絶対ルールは「ワクワク楽しむ」こと。
+                        ネガティブな感情からは良いアイデアは生まれません。
+                        だから仕事も遊びも徹底的に楽しみます。
+                        そして従業員、従業員の家族、クライアント
+                        「関わる人が全員幸せになる」そんな会社を目指しています。</p>
                 </div>
             </div>
             <div class="col col-md-1 vision_column3 p-0">
@@ -202,9 +200,18 @@
             <div class="col-md">
                 <div class="about_card text-right container">
                     <div class="about_heading">About Us</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, incidunt asperiores labore
-                        molestias expedita vero? Laudantium, est deleniti. Cumque quia, maxime fugiat vitae consequatur
-                        itaque alias fugit aperiam enim omnis.</p>
+                    <p>会社名<br>
+                        HTS有限会社<br>
+                        代表取締役<br>
+                        後藤 邦明<br>
+                        設立<br>
+                        2006年3月<br>
+                        資本金<br>
+                        300万円<br>
+                        住所<br>
+                        愛知県名古屋市西区名駅2-18-5日下ビル<br>
+                        営業時間<br>
+                        平日10:00〜17:00</p>
                 </div>
             </div>
             <div class="col col-md-7 about_column2">
@@ -235,31 +242,18 @@
     <!-- Our works ends here -->
     <!-- Our works grid starts here (NAYTHAN) -->
     <section class="grid" id="works">
-
         <div class="cont">
             <div class="content">
                 <img src="assets/images/grid/1.jpg">
             </div>
             <div class="content">
-                <h2>lorem impsum</h2>
+                <h2>WEBマーケティング事業</h2>
             </div>
             <div class="content">
-                <h3>Lorem ipasum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                </h3>
-            </div>
-        </div>
-        <div class="cont">
-            <div class="content">
-                <img src="assets/images/grid/2.jpg">
-            </div>
-            <div class="content">
-                <h2>lorem impsum</h2>
-            </div>
-            <div class="content">
-                <h3>Lorem ipasum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                </h3>
+                <p>WEBプロモーション全般<br>
+                    広告運用
+                </p>
+                <br>
             </div>
         </div>
         <div class="cont">
@@ -267,12 +261,27 @@
                 <img src="assets/images/grid/2.jpg">
             </div>
             <div class="content">
-                <h2>lorem impsum</h2>
+                <h2>クリエイティブ事業</h2>
             </div>
             <div class="content">
-                <h3>Lorem ipasum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                </h3>
+                <p>WEBサイト構築・管理<br>
+                    デザイン<br>
+                    映像・画像<br>
+                </p>
+            </div>
+        </div>
+        <div class="cont">
+            <div class="content">
+                <img src="assets/images/grid/2.jpg">
+            </div>
+            <div class="content">
+                <h2>海外ITプロダクト事業</h2>
+            </div>
+            <div class="content">
+                <p>アプリ開発<br>
+                    ソフトウェア開発<br>
+                    動画編集
+                </p>
             </div>
         </div>
     </section>
