--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/kev_responsive.css">
+    <link rel="stylesheet" href="assets/css/kevin_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
     <link rel="stylesheet" href="assets/css/naythan_responsive.css">
     <link rel="stylesheet" href="assets/css/bev_responsive.css">
@@ -198,7 +198,7 @@
                 <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1_column">
             </div>
             <div class="col-md">
-                <div class="about_card text-right container">
+                <div class="about_card container">
                     <div class="about_heading">About Us</div>
                     <p>会社名<br>
                         HTS有限会社<br>
@@ -212,6 +212,7 @@
                         愛知県名古屋市西区名駅2-18-5日下ビル<br>
                         営業時間<br>
                         平日10:00〜17:00</p>
+
                 </div>
             </div>
             <div class="col col-md-7 about_column2">
@@ -229,9 +230,9 @@
             <div class="col-md">
                 <div class="container works_card">
                     <div class="works_heading">Our works</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
                         consequuntur officiis laudantium, ut quam corrupti est labore sapiente et vero dolore nesciunt?
-                        Accusamus vitae totam saepe commodi?</p>
+                        Accusamus vitae totam saepe commodi?</p> -->
                 </div>
             </div>
             <div class="col col-md-1 works_column3 p-0">
@@ -241,8 +242,35 @@
     </section>
     <!-- Our works ends here -->
     <!-- Our works grid starts here (NAYTHAN) -->
-    <section class="grid" id="works">
+
+    <section id="works">
+        <div class="container">
+            <div class="row">
+                <div class="col-md align-self-center">
+                    <img src="./assets/images/grid/grid-1.jpg">
+                    <h2>WEBマーケティング事業</h2>
+                    <p>WEBプロモーション全般<br>広告運用</p><br>
+                </div>
+                <div class="col-md align-self-center">
+                    <img src="./assets/images/grid/grid-2.jpg">
+                    <h2>クリエイティブ事業</h2>
+                    <p>WEBサイト構築・管理<br>デザイン<br>映像・画像<br>                
+                </div>
+                <div class="col-md align-self-center">
+                    <img src="./assets/images/grid/grid-3.jpg">
+                    <h2>海外ITプロダクト事業</h2>
+                    <p>アプリ開発<br>
+                        ソフトウェア開発<br>
+                        動画編集
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- <section class="grid" id="works">
         <div class="cont">
+
             <div class="content">
                 <img src="assets/images/grid/1.jpg">
             </div>
@@ -255,6 +283,7 @@
                 </p>
                 <br>
             </div>
+            
         </div>
         <div class="cont">
             <div class="content">
@@ -284,7 +313,7 @@
                 </p>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Our works grid ends here -->
     <!-- Contact starts here (BEV) -->
 
