--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>HTS Ltd.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/kev_responsive.css">
@@ -16,8 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
-    <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 
@@ -59,15 +59,16 @@
     </section> -->
 
     <section>
-        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-3">
+        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-3" data-aos="fade-down">
             <div class="container col-10">
-                <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"></a>
+                <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"
+                        data-aos="fade-down" data-aos-duration="3000"></a>
                 <button class=" navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto" data-aos="fade-down" data-aos-duration="2000">
                         <li class="nav-item">
                             <a class="nav-link active px-3" href="#home">Home</a>
                         </li>
@@ -131,41 +132,42 @@
         <div class="parallax">
             <div class="container visual_content1">
                 <div class="inner">
-                    <h1>Thanks to everyone</h1>
-                    <p>It was celebrated its 13th anniversary!</p>
-                    <p>HTS有限会社は2019年3月15日で設立13周年を迎えます</p>
+                    <h1 data-aos="fade-up">Thanks to everyone</h1>
+                    <p data-aos="fade-up" data-aos-duration="1500">It was celebrated its 13th anniversary!</p>
+                    <p data-aos="fade-up" data-aos-duration="2000">HTS有限会社は2019年3月15日で設立13周年を迎えます</p>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- news starts here -->
     <section id="news">
         <div class="container">
-            <div class="news-title">
+            <div class="news-title" data-aos="fade-down">
                 News
             </div>
 
             <table id="news-table">
-                <tr>
+                <tr data-aos="fade-up">
                     <td id="n-title">教へひかン溶毎カオ</td>
                     <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
-                <tr>
+                <tr data-aos="fade-up" data-aos-duration="1500">
                     <td id="n-title">教へひかン溶毎カオ</td>
                     <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
-                </tr>                <tr>
+                </tr>
+                <tr data-aos="fade-up" data-aos-duration="2000">
                     <td id="n-title">教へひかン溶毎カオ</td>
                     <td id="n-date">04.09.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
             </table>
-         </div>
+        </div>
     </section>
 
     <!-- news ends here -->
@@ -173,12 +175,13 @@
     <section class="vision" id="vision">
         <div class="row p-0 m-0">
             <div class="col col-md-7">
-                <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.png" alt="">
+                <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.png" alt=""
+                    data-aos="flip-left">
             </div>
             <div class="col-md">
                 <div class="container vision_card">
-                    <div class="vision_heading">Our Vision</div>
-                    <p>弊社の絶対ルールは「ワクワク楽しむ」こと。
+                    <div class="vision_heading" data-aos="fade-up">Our Vision</div>
+                    <p data-aos="fade-up" data-aos-duration="2000">弊社の絶対ルールは「ワクワク楽しむ」こと。
                         ネガティブな感情からは良いアイデアは生まれません。
                         だから仕事も遊びも徹底的に楽しみます。
                         そして従業員、従業員の家族、クライアント
@@ -186,7 +189,8 @@
                 </div>
             </div>
             <div class="col col-md-1 vision_column3 p-0">
-                <img src="assets/images/vision/vision_img2.png" alt="" class="float-right">
+                <img src="assets/images/vision/vision_img2.png" alt="" class="float-right" data-aos="fade-up"
+                    data-aos-duration="4000">
             </div>
         </div>
     </section>
@@ -195,12 +199,13 @@
     <section class="about" id="about">
         <div class="row p-0 m-0">
             <div class="col-md about_column">
-                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1_column">
+                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1_column"
+                    data-aos="flip-right">
             </div>
             <div class="col-md">
                 <div class="about_card text-right container">
-                    <div class="about_heading">About Us</div>
-                    <p>会社名<br>
+                    <div class="about_heading" data-aos="fade-left" data-aos-duration="2500">About Us</div>
+                    <p data-aos="fade-left" data-aos-duration="3000">会社名<br>
                         HTS有限会社<br>
                         代表取締役<br>
                         後藤 邦明<br>
@@ -215,7 +220,8 @@
                 </div>
             </div>
             <div class="col col-md-7 about_column2">
-                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1">
+                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1" data-aos="flip-right"
+                    data-aos-duration="2000">
             </div>
         </div>
     </section>
@@ -417,10 +423,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="/assets/js/main.js"></script>
 
-    
+    <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script>
         $(document).ready(function () {
             // Add scrollspy to <body>
@@ -448,15 +454,13 @@
                 }  // End if
             });
         });
-    </script>
 
+
+    </script>
     <script>
-        var controller = new ScrollMagic.Controller();
-        var scene = new ScrollMagic.Scene({
-            triggerElement: '.news-title'
-        })
-        .setClassToggle('.news-title', 'show')
-        .addTo(Controller);
+        AOS.init({
+            duration: 1000
+        });
     </script>
 </body>
 
