--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
         <div class="parallax">
             <div class="container visual_content1">
                 <div class="inner">
-                    <h1 data-aos="fade-up">Thanks to everyone</h1>
-                    <p data-aos="fade-up" data-aos-duration="1500">It was celebrated its 13th anniversary!</p>
-                    <p data-aos="fade-up" data-aos-duration="2000">HTS有限会社は2019年3月15日で設立13周年を迎えます</p>
+                    <h1 data-aos="fade-up">昨日より今日、今日より明日、</h1>
+                    <p data-aos="fade-up" data-aos-duration="1500">「殻を破り続ける会社」です！</p>
                 </div>
             </div>
         </div>
@@ -176,12 +175,12 @@
         <div class="row p-0 m-0">
             <div class="col col-md-7">
                 <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.png" alt=""
-                    data-aos="flip-left">
+                    data-aos="flip-left" data-aos-duration="2000">
             </div>
             <div class="col-md">
                 <div class="container vision_card">
                     <div class="vision_heading" data-aos="fade-up">Our Vision</div>
-                    <p data-aos="fade-up" data-aos-duration="2000">弊社の絶対ルールは「ワクワク楽しむ」こと。
+                    <p data-aos="fade-up" data-aos-duration="2500">弊社の絶対ルールは「ワクワク楽しむ」こと。
                         ネガティブな感情からは良いアイデアは生まれません。
                         だから仕事も遊びも徹底的に楽しみます。
                         そして従業員、従業員の家族、クライアント
@@ -200,18 +199,12 @@
         <div class="row p-0 m-0">
             <div class="col-md about_column">
                 <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1_column"
-                    data-aos="flip-right">
+                    data-aos="flip-right" data-aos-duration="2000">
             </div>
             <div class="col-md">
-<<<<<<< HEAD
-                <div class="about_card text-right container">
-                    <div class="about_heading" data-aos="fade-left" data-aos-duration="2500">About Us</div>
-                    <p data-aos="fade-left" data-aos-duration="3000">会社名<br>
-=======
                 <div class="about_card container">
-                    <div class="about_heading">About Us</div>
-                    <p>会社名<br>
->>>>>>> upstream/master
+                    <div class="about_heading" data-aos="fade-up">About Us</div>
+                    <p data-aos="fade-up" data-aos-duration="2500">会社名<br>
                         HTS有限会社<br>
                         代表取締役<br>
                         後藤 邦明<br>
@@ -237,14 +230,14 @@
     <section class="works">
         <div class="row p-0 m-0">
             <div class="col col-md-7">
-                <img class="works_img1 img-fluid" src="assets/images/works/works_img1.png" alt="">
+                <img class="works_img1 img-fluid" src="assets/images/works/works_img1.png" alt="" data-aos="flip-left"
+                    data-aos-duration="2000">
             </div>
             <div class="col-md">
                 <div class="container works_card">
-                    <div class="works_heading">Our works</div>
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
-                        consequuntur officiis laudantium, ut quam corrupti est labore sapiente et vero dolore nesciunt?
-                        Accusamus vitae totam saepe commodi?</p> -->
+                    <div class="works_heading" data-aos="fade-up">Our works</div>
+                    <p data-aos="fade-up" data-aos-duration="2500">集客のお手伝いからクリエイティブ、<br>
+                        開発まで幅広く提案可能です。</p>
                 </div>
             </div>
             <div class="col col-md-1 works_column3 p-0">
@@ -259,19 +252,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md align-self-center">
-                    <img src="./assets/images/grid/grid-1.jpg">
-                    <h2>WEBマーケティング事業</h2>
-                    <p>WEBプロモーション全般<br>広告運用</p><br>
+                    <img src="./assets/images/grid/grid-1.jpg" data-aos="fade-right">
+                    <h2 data-aos="fade-right" data-aos-duration="2000">WEBマーケティング事業</h2>
+                    <p data-aos="fade-right" data-aos-duration="2200">WEBプロモーション全般<br>広告運用</p><br>
                 </div>
                 <div class="col-md align-self-center">
-                    <img src="./assets/images/grid/grid-2.jpg">
-                    <h2>クリエイティブ事業</h2>
-                    <p>WEBサイト構築・管理<br>デザイン<br>映像・画像<br>                
+                    <img src="./assets/images/grid/grid-2.jpg" data-aos="fade-up">
+                    <h2 data-aos="fade-up" data-aos-duration="2000">クリエイティブ事業</h2>
+                    <p data-aos="fade-up" data-aos-duration="2200">WEBサイト構築・管理<br>デザイン<br>映像・画像<br>
                 </div>
                 <div class="col-md align-self-center">
-                    <img src="./assets/images/grid/grid-3.jpg">
-                    <h2>海外ITプロダクト事業</h2>
-                    <p>アプリ開発<br>
+                    <img src="./assets/images/grid/grid-3.jpg" data-aos="fade-left">
+                    <h2 data-aos="fade-left" data-aos-duration="2000">海外ITプロダクト事業</h2>
+                    <p data-aos="fade-left" data-aos-duration="2200">アプリ開発<br>
                         ソフトウェア開発<br>
                         動画編集
                     </p>
@@ -279,7 +272,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- <section class="grid" id="works">
         <div class="cont">
 
@@ -333,7 +326,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col">
+                <div class="col" data-aos="fade-right">
 
                     <div class="contact-title">
                         <img src="./assets/images/contact/logo_3_new.png" width="60%" height="auto" />
@@ -369,7 +362,7 @@
 
                 </div>
 
-                <div class="col">
+                <div class="col" data-aos="fade-left">
                     <div class="form-title">
                         Get in touch
                     </div>
@@ -406,7 +399,7 @@
         </div>
     </section>
     <!-- Contact ends here -->
-    <footer>
+    <footer data-aos="fade-up">
         <div class="container">
             <div class="row text-center d-flex justify-content-center pt-3 mb-3">
 
