changed works grid title color

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
             <div class="col-md">
                 <div class="container works_card">
                     <div class="works_heading">Our works</div>
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, debitis, voluptatem error
                         consequuntur officiis laudantium, ut quam corrupti est labore sapiente et vero dolore nesciunt?
-                        Accusamus vitae totam saepe commodi?</p> -->
+                        Accusamus vitae totam saepe commodi?</p>
                 </div>
             </div>
             <div class="col col-md-1 works_column3 p-0">
