--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section> -->
 
     <section>
-        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-3" data-aos="fade-down">
+        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-2" data-aos="fade-down">
             <div class="container col-10">
                 <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"
                         data-aos="fade-down" data-aos-duration="3000"></a>
@@ -248,7 +248,7 @@
     <!-- Our works ends here -->
     <!-- Our works grid starts here (NAYTHAN) -->
 
-    <section id="works">
+    <section id="works" class="pt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md align-self-center">
