--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/images/contact/fav_gR0_icon.ico" type="image/x-icon">
 
 
 
