--- a/index.html
+++ b/index.html
@@ -384,11 +384,9 @@
                             </label>
                         </div>
 
-                        <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI">
+                        <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
 
-                        </div>
-
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <button class="btn" type="submit">Send</button>
                         </div>
                 </div>
