commented out the php file since it won't run in github

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
                 </div>
 
-                <?php
+                <!-- <?php
                     error_reporting(0);
                     $msg="";
 
@@ -409,7 +409,7 @@
                         echo "<script>window.open('index.php','_self')</script>";
                         }
                     }
-                ?>		
+                ?>		 -->
 
                 <div class="col" data-aos="fade-left">
                     <div class="form-title">
