--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <section class="vision" id="vision">
         <div class="row p-0 m-0">
             <div class="col col-md-7">
-                <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.png" alt=""
+                <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.jpg" alt=""
                     data-aos="flip-left" data-aos-duration="2000">
             </div>
             <div class="col-md">
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="col col-md-1 vision_column3 p-0">
-                <img src="assets/images/vision/vision_img2.png" alt="" class="float-right" data-aos="fade-up"
+                <img src="assets/images/vision/vision_img2.jpg" alt="" class="float-right" data-aos="fade-up"
                     data-aos-duration="4000">
             </div>
         </div>
@@ -199,7 +199,7 @@
     <section class="about" id="about">
         <div class="row p-0 m-0">
             <div class="col-md about_column">
-                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1_column"
+                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1_column"
                     data-aos="flip-right" data-aos-duration="2000">
             </div>
             <div class="col-md">
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="col col-md-7 about_column2">
-                <img src="assets/images/about/about_img1.png" alt="" class="img-fluid about_img1" data-aos="flip-right"
+                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1" data-aos="flip-right"
                     data-aos-duration="2000">
             </div>
         </div>
@@ -231,7 +231,7 @@
     <section class="works">
         <div class="row p-0 m-0">
             <div class="col col-md-7">
-                <img class="works_img1 img-fluid" src="assets/images/works/works_img1.png" alt="" data-aos="flip-left"
+                <img class="works_img1 img-fluid" src="assets/images/works/works_img1.jpg" alt="" data-aos="flip-left"
                     data-aos-duration="2000">
             </div>
             <div class="col-md">
