--- a/index.html
+++ b/index.html
@@ -221,9 +221,12 @@
                     <!-- maps section -->
                     <div class="maprouter mt-3">
                         <div class="gmap_canvas">
-                            <iframe width="600" height="500" id="gmap_canvas"
+                            <!-- <iframe width="600" height="500" id="gmap_canvas"
                                 src="https://maps.google.com/maps?q=tokyo%20japan&t=&z=13&ie=UTF8&iwloc=&output=embed"
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                            </iframe> -->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1790.5326894092498!2d136.87821449131977!3d35.177376035875014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376ebcc0cb987%3A0xb587e34b4720cc1!2zSmFwYW4sIOOAkjQ1MS0wMDQ1IEFpY2hpLCBOYWdveWEsIE5pc2hpIFdhcmQsIE1laWVraSwgMi1jaMWNbWXiiJIxOOKIkjUg5pel5LiL44OT44Or!5e0!3m2!1sen!2sph!4v1586778185541!5m2!1sen!2sph" 
+                            width="600" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
                             </iframe>
                         </div>
                         <style>
